# Vichaar-Core

./: .dockerignore  .env.example  .gitignore  Dockerfile  HOW_IT_WORKS.txt  README.md  app.py  audit_report.md  clean_gitlog.txt  clean_openenv.txt  config.py  env.py  env_config.py  fastapi_app.py  gitlog.txt  grader.py  grader.txt  gradio_app.py  inference.py  inference_output.txt  main.py  models.py  multi_agent.py  old_openenv.txt  openenv.yaml  out.txt  pyproject.toml  requirements.txt  reward.py  schema_dump.py  search.py  tasks.py  test_env.py  test_quick_validate.py  test_smoke.py  test_validator_simulation.py  test_validators.py  test_validators_out.txt  train_loop.py  trajectory.py  (+4 more)
agents/: __init__.py  base.py  ethics_agent.py  factory.py  legal_agent.py  pr_agent.py  profit_agent.py  risk_agent.py
api/: routes.py  schemas.py  server.py
configs/: agent_config.py  api_config.py  env_config.py
core/: __init__.py  env.py  reward.py
decision/: __init__.py  aggregator.py  ceo.py  coordinator.py  policy.py  safemode.py
docs/: agents.md  architecture.md  data_flow.md
evaluation/: __init__.py  grader.py  scoring.py
openenv/: __init__.py  environment.py  models.py  scenarios.py
server/: app.py  routes.py  schemas.py
tasks/: __init__.py  adversarial.py  chaotic.py  easy.py  grader.py  grader_report.txt  grader_report_easy.txt  graders.py  hard.py  medium.py  registry.py
test_env/: README.md
tests/: test_openrouter.py
training/: __init__.py  train_loop.py  trajectory.py
